# ia-space

./: .env-langflow  .env-litellm  .env-neo4j  .env-openwebui  .env-pgvector  .env-redis  .env-tailscale  .gitignore  README.md  Vagrantfile  docker-compose.yaml
agentic/adk/: pyproject.toml  requirements.txt  resultado_task_1.txt
agentic/adk/agents/: requirement_analyst.py  requirement_reviewer.py
agentic/adk/tasks/: task_1.md
agentic/adk/userstory_writer/: agent.py  prompt.py
litellm/: config.yaml
mcp-servers/: .$mcp_servers.drawio.bkp  .$mcp_servers.drawio.dtmp  docker-compose.yaml  mcp_servers.drawio
mcp-servers/mcp-devices/: .env-template  Dockerfile  README.md  config.py  main.py  main_._py  main_2._py  pyproject.toml  services.py
mcp-servers/mcp-gitlab/: main.py  pyproject.toml
mcp-servers/mcp-prompts/: README.md  config.py  main_._py  pyproject.toml  template_server.py
mcp-servers/mcp-prompts/mcp_simple_prompt/: server._py  server.py
mcp-servers/mcp-prompts/templates/meeting_analysis/: config.yaml  prompts.md  template.md
mcp-servers/mcp-units/: main.py  pyproject.toml
supabase/: README.md
workflows/: Mantenimiento_con_Cambio_de_Equipo.json  Multi_Agent_Requirements_Crew.json  mantenimiento-cambio-equipos.md  sub_agent_analyst.json  sub_qa_analyst.json  sub_requirement_reviewer.json  sub_ux_ui_designer.json
