# pyproject.toml para proyecto Agentic ADK
[project]
name = "adk-agentic"
version = "0.1.0"
description = "Proyecto con agentes Requirement Analyst y Requirement Reviewer usando Google Agentic ADK."
authors = ["Ilver Anache<ianache@crossnetcorp.com>"]
requires-python = ">=3.10"
dependencies = [
    "adk>=0.0.5",
    python-dotenv = "^1.0.1",
    "google-adk==1.0.0",
    "google-cloud-aiplatform==1.93",
#    "google-genai==1.14.0",
]

[tool.setuptools.packages.find]
where = ["agents"]
