[project]
name = "mcp-prompts"
version = "0.1.0"
description = "Prompts provider"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "fastmcp>=2.3.4",
    "mcp>=1.9.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "requests==2.31.0",
    "uvicorn>=0.34.2",
]
