[project]
name = "mcp-prompts"
version = "0.1.0"
description = "Prompts provider"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "fastmcp>=2.3.4",
    "mcp>=1.9.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "requests==2.31.0",
    "uvicorn>=0.34.2",
    "anyio>=4.5", 
    "click>=8.1.0", 
    "httpx>=0.27", "mcp"
]

[project.scripts]
mcp-simple-prompt = "mcp_simple_prompt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_prompt"]

[tool.pyright]
include = ["mcp_simple_prompt"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]